# CUDA-NT-Xent-MPI-NCCL-SimCLR

./: CMakeLists.txt  CMakeLists_new.txt
include/: ntxent_kernel.cuh
python/: test.py
src/: benchmark.cpp  binding.cpp  binding_new.cpp  ntxent_kernel.cu  ntxent_kernel_new.cu
tests/: CMakeLists.txt  test_backward.cpp  test_forward.cpp  test_utils.hpp
